--- a/maze.html
+++ b/maze.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>maze game 🐈</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Quicksand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
     <link href="maze.css" rel="stylesheet" />
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container">
-      <h1>Welcome</h1>
+      <h1>Catventure Maze</h1>
       <img
         src="./assets/Cat Pixel Sticker.gif"
         alt="Cute Cat"
@@ -21,5 +21,16 @@
       />
       <button class="start-btn">Start</button>
     </div>
+
+    <!-- Hidden canvas -->
+    <canvas
+      id="mazeCanvas"
+      width="600"
+      height="600"
+      style="display: none"
+    ></canvas>
+    <button id="backBtn" style="display: none" class="back-btn">⟵ Back</button>
+
+    <script src="maze.js"></script>
   </body>
 </html>
