added score and regeneration button

--- a/maze.html
+++ b/maze.html
@@ -30,6 +30,8 @@
       style="display: none"
     ></canvas>
     <button id="backBtn" style="display: none" class="back-btn">⟵ Back</button>
+    <div id="scoreBox" style="display: none"></div>
+    <button id="regenBtn" style="display: none">🔄 regenerate</button>
 
     <script src="maze.js"></script>
   </body>
